# playmat

./: Cargo.toml  Justfile  rustfmt.toml
.github/workflows/: playmat.yml
client/: Cargo.toml  Justfile  index.html
client/src/: app.rs  context.rs  debug_window.rs  gui.rs  lib.rs  main.rs  net.rs  renderer.rs
client/src/gui/: auth.rs  diagnostics.rs  mod.rs
client/src/platform/: mod.rs
client/src/platform/native/: logger.rs  runtime.rs
client/src/platform/wasm/: logger.rs  runtime.rs
server/: Cargo.toml  Justfile
server/src/: lib.rs  main.rs
server/src/handlers/: signin.rs
shared/: Cargo.toml
shared/src/: lib.rs  time.rs
shared/src/message/: client.rs  mod.rs  server.rs
