[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
egui = "0.33.0"
egui-wgpu = "0.33.0"
egui-winit = { version = "0.33.0", default-features = false }
winit = "0.30.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"]}
wgpu = "27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = {version = "1.46.1", features = ["macros", "rt"]}
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "27", features = ["webgl"] }
