[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["signal", "macros", "rt-multi-thread"] }
log = { workspace = true }
env_logger = { workspace = true }
bitcode = { workspace = true }
